# mingw4msvc

./: .gitignore  CMakeLists.txt  README.md
libs/x86_64_txz/: libFLAC.a.txz  libSDL.a.txz  libSDL_image.a.txz  libSDLmain.a.txz  liba52.a.txz  libarchive.a.txz  libaribb24.a.txz  libaribb25.a.txz  libass.a.txz  libavutil.a.txz  libbluray.a.txz  libcaca.a.txz  libcddb.a.txz  libcrypt32.a.txz  libd3d11_common.a.txz  libdav1d.a.txz  libdca.a.txz  libdvbpsi.a.txz  libdvdcss.a.txz  libdvdnav.a.txz  libdvdread.a.txz  libeay32.lib.txz  libfaad.a.txz  libfluidlite.a.txz  libfontconfig.a.txz  libfreetype.a.txz  libfribidi.a.txz  libgcc.a.txz  libgcrypt.a.txz  libglew32.a.txz  libgmp.a.txz  libgnutls.a.txz  libgoom2.a.txz  libgpg-error.a.txz  libgsm.a.txz  libhogweed.a.txz  libiconv.a.txz  libintl.a.txz  libixml.a.txz  libjpeg.a.txz  (+52 more)
libs/x86_64_txz/qt_5.12.4/: Qt5Cored.lib.txz  Qt5Guid.lib.txz  Qt5Svgd.lib.txz  Qt5Widgetsd.lib.txz
